Correction oubli sur numéro étranger

--- a/src/main/webapp/scripts/components/application/application_list.html
+++ b/src/main/webapp/scripts/components/application/application_list.html
@@ -46,7 +46,8 @@
 					<tr class="applicationListLine" ng-repeat="application in applications" ng-click="goToValidationDetail(application)">
 						<td>{{application.identity.lastName}}</td>
 						<td>{{application.identity.firstName}}</td>
-						<td>{{application.userId}}</td>
+						<td ng-if="application.identity.foreignerNumber">{{application.identity.foreignerNumber}}</td>
+						<td ng-if="!application.identity.foreignerNumber">{{application.userId}}</td>
 						<td>{{getNationality(application.identity.nationality)}}</td>
 						<td>
 							<span translate="sejourApp.ApplicationType.{{application.type}}"></span>
@@ -69,7 +70,8 @@
 					<tr class="applicationListLine" ng-repeat-start="application in applications" ui-sref="documents({id: application.id})" ng-if="hasDocumentToCertify(application)">
 						<td>{{application.identity.lastName}}</td>
 						<td>{{application.identity.firstName}}</td>
-						<td>{{application.userId}}</td>
+						<td ng-if="application.identity.foreignerNumber">{{application.identity.foreignerNumber}}</td>
+						<td ng-if="!application.identity.foreignerNumber">{{application.userId}}</td>
 						<td>
 							<span translate="sejourApp.ApplicationType.{{application.type}}"></span>
 							<span translate="sejourApp.ApplicationNature.{{application.nature}}"></span>
@@ -79,7 +81,8 @@
 					<tr class="applicationListLine" ui-sref="biometrics({id: application.id})" ng-if="!application.biometricsDate && application.nature !== 'naturalisation'">
 						<td>{{application.identity.lastName}}</td>
 						<td>{{application.identity.firstName}}</td>
-						<td>{{application.userId}}</td>
+						<td ng-if="application.identity.foreignerNumber">{{application.identity.foreignerNumber}}</td>
+						<td ng-if="!application.identity.foreignerNumber">{{application.userId}}</td>
 						<td>
 							<span translate="sejourApp.ApplicationType.{{application.type}}"></span>
 							<span translate="sejourApp.ApplicationNature.{{application.nature}}"></span>
@@ -89,7 +92,8 @@
 					<tr class="applicationListLine" ng-repeat-end ui-sref="interview({id: application.id})" ng-if="application.nature === 'naturalisation' && !application.interviewDate">
 						<td>{{application.identity.lastName}}</td>
 						<td>{{application.identity.firstName}}</td>
-						<td>{{application.userId}}</td>
+						<td ng-if="application.identity.foreignerNumber">{{application.identity.foreignerNumber}}</td>
+						<td ng-if="!application.identity.foreignerNumber">{{application.userId}}</td>
 						<td>
 							<span translate="sejourApp.ApplicationType.{{application.type}}"></span>
 							<span translate="sejourApp.ApplicationNature.{{application.nature}}"></span>
