--- a/src/main/webapp/scripts/components/form/inputDate.html
+++ b/src/main/webapp/scripts/components/form/inputDate.html
@@ -9,5 +9,5 @@
 			placeholder="{{'global.form.date.format' | translate}}" 
 			ng-model="dateTxt" 
 			ng-blur="updateDate()"
-			ng-readonly="readonly!==undefined">
+			ng-readonly="readonly === true">
 </div>
